# aie-shishova

./: README.md  requirements.txt
engineering-notes/: git-lfs.md
guides/: README.md  cli-101-typer.md  fastapi-101.md  git-101.md  python-101.md  uv-101.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/: .gitattributes  COURSE-OVERVIEW.md  COURSE-POLICIES.md  COURSE-SCHEDULE.md  GLOSSARY.md  HOW-TO-ASK-QUESTIONS.md  README.md
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW08-09/: HW08-09.ipynb  report.md
project/: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml  report.md  self-checklist.md
project/artifacts/: README.md
project/artifacts/notebooks_artifacts/: baseline_metrics.json  best_cb_model_config.json  best_cf_model_config.json  collaborative_filtering_metrics.json  content_based_metrics.json
project/configs/: .env.example  README.md  models.json  paths.json
project/data/: README.md
project/notebooks/: 01_eda.ipynb  02_preprocessing_and_experiments.ipynb  README.md  Untitled.ipynb
project/scripts/: README.md  download_models.py  load_and_prepare_data.py  run_api.py  train_models.py
project/src/: README.md
project/src/mrh/: config.py  data.py  models.py  utils.py
project/src/mrh/api/: dependencies.py  main.py  schemas.py
project/src/mrh/api/endpoints/: health.py  predict.py
project/tests/: README.md  test_data.py  test_models.py  test_utils.py
project/tests/test_api/: test_health.py  test_predict.py
(+68 files in other folders)
